crates/kul-wasm/tests/snapshots/export_graph__example_07_multi_file_extended_family.snap
---
source: crates/kul-wasm/tests/export_graph.rs
assertion_line: 179
expression: json
---
{
  "ok": true,
  "schema": 1,
  "kul": "0.1",
  "graph": {
    "persons": [
      {
        "id": "ramesh",
        "name": "Ramesh Patel",
        "gender": "male",
        "born": {
          "value": "1928-04-10",
          "precision": "day",
          "circa": false
        },
        "died": {
          "value": "2010-12-03",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "sita",
        "name": "Sita Patel",
        "gender": "female",
        "born": {
          "value": "1931-09-22",
          "precision": "day",
          "circa": false
        },
        "died": {
          "value": "2018-06-14",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "alice",
        "name": "Alice Patel",
        "gender": "female",
        "born": {
          "value": "1955-07-19",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "bob",
        "name": "Bob Khan",
        "gender": "male",
        "born": {
          "value": "1953-11-02",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "dev",
        "name": "Dev Patel",
        "gender": "male",
        "born": {
          "value": "1958-03-28",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "eva",
        "name": "Eva Singh",
        "gender": "female",
        "born": {
          "value": "1959-12-04",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "carol",
        "name": "Carol Patel",
        "gender": "female",
        "born": {
          "value": "1981-06-08",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "diya",
        "name": "Diya Patel",
        "gender": "female",
        "born": {
          "value": "1984-10-30",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "farid",
        "name": "Farid Patel",
        "gender": "male",
        "born": {
          "value": "1985-01-17",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "gita",
        "name": "Gita Patel",
        "gender": "female",
        "born": {
          "value": "1988",
          "precision": "year",
          "circa": true
        }
      }
    ],
    "marriages": [
      {
        "id": "m_ramesh_sita",
        "spouses": [
          "ramesh",
          "sita"
        ],
        "start": {
          "value": "1952-02-18",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "m_alice_bob",
        "spouses": [
          "alice",
          "bob"
        ],
        "start": {
          "value": "1978-09-15",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "m_dev_eva",
        "spouses": [
          "dev",
          "eva"
        ],
        "start": {
          "value": "1982-04-22",
          "precision": "day",
          "circa": false
        }
      }
    ],
    "parenthoodLinks": [
      {
        "marriageId": "m_ramesh_sita",
        "childId": "alice",
        "kind": "biological"
      },
      {
        "marriageId": "m_ramesh_sita",
        "childId": "dev",
        "kind": "biological"
      },
      {
        "marriageId": "m_alice_bob",
        "childId": "carol",
        "kind": "biological"
      },
      {
        "marriageId": "m_alice_bob",
        "childId": "diya",
        "kind": "biological"
      },
      {
        "marriageId": "m_dev_eva",
        "childId": "farid",
        "kind": "biological"
      },
      {
        "marriageId": "m_dev_eva",
        "childId": "gita",
        "kind": "biological"
      }
    ]
  }
}
