crates/kul-wasm/tests/snapshots/export_graph__example_07_multi_file_extended_family_cytoscape.snap
---
source: crates/kul-wasm/tests/export_graph.rs
assertion_line: 193
expression: json
---
{
  "ok": true,
  "schema": 1,
  "kul": "0.1",
  "graph": {
    "nodes": [
      {
        "data": {
          "id": "p:ramesh",
          "type": "person",
          "name": "Ramesh Patel",
          "gender": "male",
          "born": {
            "value": "1928-04-10",
            "precision": "day",
            "circa": false
          },
          "died": {
            "value": "2010-12-03",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:sita",
          "type": "person",
          "name": "Sita Patel",
          "gender": "female",
          "born": {
            "value": "1931-09-22",
            "precision": "day",
            "circa": false
          },
          "died": {
            "value": "2018-06-14",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:alice",
          "type": "person",
          "name": "Alice Patel",
          "gender": "female",
          "born": {
            "value": "1955-07-19",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:bob",
          "type": "person",
          "name": "Bob Khan",
          "gender": "male",
          "born": {
            "value": "1953-11-02",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:dev",
          "type": "person",
          "name": "Dev Patel",
          "gender": "male",
          "born": {
            "value": "1958-03-28",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:eva",
          "type": "person",
          "name": "Eva Singh",
          "gender": "female",
          "born": {
            "value": "1959-12-04",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:carol",
          "type": "person",
          "name": "Carol Patel",
          "gender": "female",
          "born": {
            "value": "1981-06-08",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:diya",
          "type": "person",
          "name": "Diya Patel",
          "gender": "female",
          "born": {
            "value": "1984-10-30",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:farid",
          "type": "person",
          "name": "Farid Patel",
          "gender": "male",
          "born": {
            "value": "1985-01-17",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:gita",
          "type": "person",
          "name": "Gita Patel",
          "gender": "female",
          "born": {
            "value": "1988",
            "precision": "year",
            "circa": true
          }
        }
      },
      {
        "data": {
          "id": "m:m_ramesh_sita",
          "type": "marriage",
          "start": {
            "value": "1952-02-18",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "m:m_alice_bob",
          "type": "marriage",
          "start": {
            "value": "1978-09-15",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "m:m_dev_eva",
          "type": "marriage",
          "start": {
            "value": "1982-04-22",
            "precision": "day",
            "circa": false
          }
        }
      }
    ],
    "edges": [
      {
        "data": {
          "source": "m:m_ramesh_sita",
          "target": "p:ramesh",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_ramesh_sita",
          "target": "p:sita",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_alice_bob",
          "target": "p:alice",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_alice_bob",
          "target": "p:bob",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_dev_eva",
          "target": "p:dev",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_dev_eva",
          "target": "p:eva",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_ramesh_sita",
          "target": "p:alice",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_ramesh_sita",
          "target": "p:dev",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_alice_bob",
          "target": "p:carol",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_alice_bob",
          "target": "p:diya",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_dev_eva",
          "target": "p:farid",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_dev_eva",
          "target": "p:gita",
          "type": "biological_child"
        }
      }
    ]
  }
}
